--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <p id="greeting">Loading...</p>
+        <!--<script src="app.js"></script>-->
     </body>
 </html>
